--- a/app/index.html
+++ b/app/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title> FULLGUEROLES COUNTY FUTBOL LEAGUE - PAY PER VIEW APP - MATCHDAY 1</title>
+    <title> FULLGUEROLA COUNTY FUTBOL LEAGUE - PAY PER VIEW APP - MATCHDAY 2</title>
   </head>
   <body>
-    <p><b>SELECT A FUTBOL MATCH - MATCHDAY 1</b></p>
+    <p><b>SELECT A FUTBOL MATCH - MATCHDAY 2</b></p>
     <form action="ppv.php" method="GET"> <b>Team 1:</b><br>
       <input name="e1" value="a" type="radio">Castellfollit United
       Football Club<br>
@@ -30,6 +30,6 @@
       <input value="Submit" type="submit"><input value="Reset" type="reset">
     </form>
     <br>
-    Author username: dcolla2<br>
+    Author username: victor23daw2<br>
   </body>
 </html>
